--- a/src/main/java/co/edu/unicauca/layersmvc/presentacion/GUIAddProjectViewController.form
+++ b/src/main/java/co/edu/unicauca/layersmvc/presentacion/GUIAddProjectViewController.form
@@ -108,7 +108,6 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="jresumenPro" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="jdescripcionPro" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" attributes="0">
@@ -155,10 +154,7 @@
                                   </Group>
                               </Group>
                               <Component id="txtobjetivosPro" min="-2" pref="199" max="-2" attributes="0"/>
-                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                  <Component id="txtnombrePro" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="txtresumenPro" alignment="0" pref="199" max="32767" attributes="0"/>
-                              </Group>
+                              <Component id="txtnombrePro" alignment="0" min="-2" pref="199" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
@@ -197,19 +193,14 @@
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                                   <Component id="jnombrePro" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="txtnombrePro" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="87" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jresumenPro" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtresumenPro" min="-2" pref="51" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jobjetivosPro" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="txtobjetivosPro" alignment="3" min="-2" pref="43" max="-2" attributes="0"/>
@@ -234,11 +225,6 @@
                     <Property name="text" type="java.lang.String" value="Nombre Proyecto:"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JLabel" name="jresumenPro">
-                  <Properties>
-                    <Property name="text" type="java.lang.String" value="Resumen:"/>
-                  </Properties>
-                </Component>
                 <Component class="javax.swing.JLabel" name="jobjetivosPro">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Objetivos:"/>
@@ -250,8 +236,6 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtnombrePro">
-                </Component>
-                <Component class="javax.swing.JTextField" name="txtresumenPro">
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtobjetivosPro">
                 </Component>
